# edukate-backend/src/main/kotlin/io/github/sanyavertolet/edukate/backend/dtos/ProblemDto.kt
@@ -1,6 +1,8 @@
 package io.github.sanyavertolet.edukate.backend.dtos
 
 import io.github.sanyavertolet.edukate.backend.entities.Problem
+import io.github.sanyavertolet.edukate.backend.entities.Subproblem
+import io.github.sanyavertolet.edukate.common.ContentLanguage
 
 data class ProblemDto(
     val key: String,
@@ -9,8 +11,9 @@ data class ProblemDto(
     val isHard: Boolean,
     val tags: List<String>,
     val text: String,
-    val subtasks: List<Problem.Subtask>,
+    val subproblems: List<Subproblem>,
     val images: List<String>,
     val status: Problem.Status,
     val hasResult: Boolean,
+    val language: ContentLanguage,
 )
