# edukate-backend/src/main/kotlin/io/github/sanyavertolet/edukate/backend/entities/Subproblem.kt
@@ -1,0 +1,3 @@
+package io.github.sanyavertolet.edukate.backend.entities
+
+data class Subproblem(val code: String, val text: String)
